# ticket-booking-system

./: .env.example  LICENSE  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.telemetry.dev.yml  docker-compose.telemetry.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  nginx.conf.template  start.sh
backend/: .dockerignore  Dockerfile  alembic.ini  prometheus.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 012dd508921f_initial.py  1d906f8719bb_initial.py  8e2f9b02e8e3_initial.py  ce79333bb08c_added_view_logs.py
backend/src/: app.py  exception_handlers.py  main.py  metrics.py  routes.py  settings.py  uow.py
backend/src/app/: exceptions.py  lifespan.py  main.py  metrics.py  routes.py  uow.py
backend/src/base/: annotations.py  database.py  dependencies.py  exceptions.py  models.py  pagination.py  schema.py
backend/src/base/core/: repository.py  service.py
backend/src/base/security/: jwt_tokens.py
backend/src/base/uow/: factory.py
backend/src/cli/: base.py  colors.py  create_user.py  entrypoint.py  enums.py  seed_system_data.py
backend/src/cli/commands/: create_user.py  seed.py
backend/src/common/: annotations.py  data_objects.py  dependencies.py  protocols.py  repositories.py  schemas.py  services.py
backend/src/common/orm/: models.py
backend/src/common/uow/: factory.py
backend/src/common/utils/: strings.py
backend/src/common/views/: data_objects.py  mixins.py  models.py  protocols.py  repositories.py
backend/src/core/: annotations.py  database.py  exceptions.py  settings.py  tasks.py  tiq.py  uow.py
backend/src/core/infrasctructure/: cache_manager.py  task_manager.py  uow_factory.py
backend/src/core/mail/: settings.py
backend/src/core/security/: __init__.py  jwt_tokens.py  passwords.py
backend/src/domain/services/: __init__.py  base.py
backend/src/event/: dependencies.py  models.py  repository.py  routes.py  schemas.py  services.py
backend/src/modules/admin/: routes.py
backend/src/modules/event/: data_objects.py  dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/src/modules/order/: data_objects.py  (+7 more)
backend/src/ticket/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py  tasks.py
backend/src/user/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin.py  test_events.py  test_moderation.py  test_tickets.py  test_users.py
backend/tests/admin/: conftest.py  test_categories.py  test_security_and_infra.py  test_users.py
backend/tests/events/: conftest.py  test_actions_and_infra.py  test_events.py  test_views.py
backend/tests/moderation/: conftest.py  test_events.py  test_security.py  test_users.py
backend/tests/orders/: conftest.py  test_booking.py  test_payment.py
backend/tests/tickets/: conftest.py  test_booking_and_payment.py  test_categories.py  test_security.py  test_ticket_managent.py  test_ticket_types.py
backend/tests/users/: conftest.py  test_auth.py  test_tasks.py  test_verification.py
(+91 files in other folders)
