[project]
name = "ticket-booking-system"
version = "0.0.1"
description = "A system for booking event tickets. It allows organizers to create their own events and add tickets for them, while users can easily book and pay for them."
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.1",
    "SQLAlchemy==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic-settings==2.5.2",
    "pydantic[email]==2.12.5",
    "uvicorn==0.41.0",
    "taskiq==0.12.4",
    "taskiq-redis==1.0.1",
    "prometheus-fastapi-instrumentator==7.1.0"
]

[dependency-groups]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning"
]