[project]
name = "ticket-booking-system"
version = "0.0.1"
description = "A system for booking event tickets. It allows organizers to create their own events and add tickets for them, while users can easily book and pay for them."
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.1",
    "fastapi-mail==1.6.5",
    "SQLAlchemy==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic-settings==2.14.0",
    "pydantic[email]==2.12.5",
    "uvicorn==0.41.0",
    "redis==7.4.1",
    "pyjwt==2.12.1",
    "taskiq==0.12.4",
    "taskiq-redis==1.2.2",
    "prometheus-fastapi-instrumentator==8.0.0",
]

[dependency-groups]
lint = [
    "mypy==2.1.0",
    "ruff==0.15.18"
]

test = [
    "pytest==9.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning"
]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
exclude = ["alembic/"]
explicit_package_bases = true
mypy_path = "."

warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py313"
line-length = 120

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]

ignore = []

[tool.ruff.lint.isort]
known-third-party = ["sqlalchemy", "redis"]
